--- a/restaurants/static/restaurants/style.css
+++ b/restaurants/static/restaurants/style.css
@@ -277,3 +277,9 @@ footer {
     background-color: #1e3a6f; /* Darker shade on hover */
 }
 
+.hint {
+    display: none;
+    color: midnightblue;
+    font-size: 15px;
+}
+
