--- a/restaurants/templates/restaurants/login.html
+++ b/restaurants/templates/restaurants/login.html
@@ -16,21 +16,21 @@
             <div class="row">
                 <i class="fas fa-user"></i>
                 <label>
-                    <input type="text" id="id_username" name="username" placeholder="Enter email" required>
+                    <input type="text" id="id_username" name="username" placeholder="Enter your username" required>
                 </label>
             </div>
             {% csrf_token %}
             <div class="row">
                 <i class="fas fa-lock"></i>
                 <label>
-                    <input type="password" id='id_password' name="password" placeholder="Enter password" required>
+                    <input type="password" id='id_password' name="password" placeholder="Enter your password" required>
                 </label>
             </div>
             <div class="pass"><a href="#">Forgot password?</a></div>
             <div class="row button">
                 <input type="submit">
             </div>
-            <div class="signup-link">Don't have an account? <a href="#">Join now!</a></div>
+            <div class="signup-link">Don't have an account? <a href="{% url 'register' %}">Join now!</a></div>
         </form>
     </div>
 </div>
