--- a/restaurants/static/restaurants/favorites.css
+++ b/restaurants/static/restaurants/favorites.css
@@ -1,6 +1,6 @@
 body {
-    font-family: "Apple Braille";
-    background-color: #f4f4f4;
+    font-family: "Apple Braille", serif;
+    background-color: #f0f8ff;
     color: #333;
     margin: 0;
     padding: 0;
@@ -32,6 +32,7 @@ ul {
 /* Sample favorites list */
 .sample_favs {
     text-align: center;
+    font-size: 1.3em;
     color: #888;
 }
 
